# OKX-MT5-Arbitrage

./: .gitignore  CMakeLists.txt  编译命令.txt
config/: config.json
doc/00客户要求/: 项目的要求.docx
doc/01前期工作/: OKX-MT5项目完整总结.md  okx_api_extension_design.md  单客户本地使用场景优化方案.md  客户需求与多层面思考分析报告.md  阶段1-API与数据层完整实现计划.md  项目对话记录完整统计分析报告.md  项目总结-v0.1.md
doc/03交接/: ai任务交接.txt
doc/06 github命令/: github.txt
doc/07 配置终端/: settings.json  终极配置：settings.json  终端中输入.txt
doc/09 编译/: 编译命令.txt
include/: config.h  data_types.h  http_client.h  okx_rest_api.h  okx_signer.h  okx_websocket.h
src/: config.cpp  http_client.cpp  okx_rest_api.cpp  okx_signer.cpp
tests/: test_api_validator.cpp  test_config.cpp  test_config_en.cpp
